--- a/src/burai/app/about/QEFXAboutDialog.fxml
+++ b/src/burai/app/about/QEFXAboutDialog.fxml
@@ -27,7 +27,7 @@
                   </Text>
                </center>
                <bottom>
-                  <Label style="-fx-font-family: monospaced;" text="Copyright (C) 2016 Satomichi Nishihara &lt;nisihara.burai@gmail.com&gt;." BorderPane.alignment="CENTER">
+                  <Label style="-fx-font-family: monospaced;" text="Copyright (C) 2017 Queensland University Of Technology&#10;Developed by Jason D'Netto &lt;j.dnetto@qut.edu.au&gt;&#10;&#10;Created from work released under GPL v3&#10;by Satomichi Nishihara &lt;nisihara.burai@gmail.com&gt;." BorderPane.alignment="CENTER">
                      <BorderPane.margin>
                         <Insets top="12.0" />
                      </BorderPane.margin>
